# salt

./: .gitignore  .gitlab-ci.yml  .htaccess  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  changelog.md  mkdocs.yaml  pyproject.toml  requirements-flash.txt  requirements-ig.txt  requirements-muP.txt  requirements.txt  zensical.toml
.gitlab/: .ci-build.yaml  .ci-coverage.yaml  .ci-docs.yaml  .ci-pre-commit.yaml  .ci-publish.yaml  .ci-test.yaml
.gitlab/issue_templates/: bug-report.md  bug_report.md
.gitlab/merge_request_templates/: default.md
.gitlab/workflow/: .ci-build.yaml  .ci-docs.yaml  .ci-pre-commit.yaml  .ci-test.yaml  label_bot.py  label_mapping.yaml  reviewers_mapping.yaml
docs/: api.md  configuration.md  contributing.md  docs_development.md  evaluation.md  export.md  index.md  indicomb.yaml  preprocessing.md  requirements.txt  setup.md  training.md  tutorial-Xbb.md  tutorial.md
docs/api/: data.md  initialisation.md  models.md  tasks.md  transformer.md
paper/: paper.bib  paper.md
salt/: __init__.py  lightning.py  lightning_module.py  main.py  modelwrapper.py  submit_slurm.sh  to_onnx.py  train.py
salt/callbacks/: __init__.py  checkpoint.py  confusion_matrix.py  gradient_logger.py  integrated_gradients_writer.py  maskformer_confusion_matrix.py  maskformer_metrics.py  performancewriter.py  predictionwriter.py  saveconfig.py  weight_logger.py
salt/configs/: Baseline_Xbb.yaml  DL1.yaml  Dipz.yaml  GATv2.yaml  GN1.yaml  GN1Xbb.yaml  GN2.yaml  GN2X.yaml  GN2XE.yaml  GN2XTau.yaml  GN2X_qcdsplit.yaml  GN2_charded_neutral_loose_aux.yaml  GN2_extended.yaml  GN2_muP.yaml  GN2_tracks_neutral_CA.yaml  GN2_tracks_neutral_SA_aux.yaml  GN2emu.yaml  GN3.yaml  GN3EPCLV01.yaml  GN3X.yaml  MaskFormer.yaml  PLITel.yaml  SubjetXbb.yaml  TPLTmu.yaml  base.yaml  defaults.yaml  dips.yaml  encoder-v2.yaml  event_classifier.yaml  flow.yaml  gnn.yaml  gnn_sdp.yaml  hitz.yaml  main.yaml  nan_regression.yaml  parameterisation_concatenation.yaml  parameterisation_featurewise.yaml  regression.yaml  regression_gaussian.yaml  regression_multi_target.yaml  (+4 more)
salt/configs/GN2/: GN2.yaml  GN2X.yaml  GN2XE.yaml  GN2XTau.yaml  GN2X_qcdsplit.yaml  GN2_charded_neutral_loose_aux.yaml  GN2_extended.yaml  GN2_muP.yaml  GN2_open_data.yaml  GN2_tracks_neutral_CA.yaml  GN2_tracks_neutral_SA_aux.yaml  GN2emu.yaml
salt/configs/GN3_dev/: GN2_dR.yaml  GN3_LepID_SMT.yaml  GN3_baseline.yaml  GN3_baseline_loose.yaml  GN3_dR.yaml  GN3_flow.yaml  GN3_tracklabel.yaml  GN3_v00.yaml
salt/configs/GN3v01/: GN3V00.yaml  GN3V01.yaml  GN3V01_bcCharge.yaml  GN3_Charge.yaml  GN3_Hybrid.yaml  GN3_SoftE.yaml  GN3_v01.yaml
salt/configs/defaults/: fit.yaml  test.yaml
salt/configs/legacy/: DL1.yaml  Dipz.yaml  SubjetXbb.yaml
salt/data/: __init__.py  datamodules.py  datasets.py  edge_features.py  samplers.py  scaler.py  transforms.py
salt/losses/: __init__.py  classification.py  jet.py
salt/models/: __init__.py  attention.py  dense.py  edge_constructor.py  featurewise.py  init.py  initnet.py  inputnorm.py  layernorm.py  loss.py  maskformer.py  maskformer_loss.py  matcher.py  mlp_tagger.py  pooling.py  posenc.py  r21xbb.py  saltmodel.py  tagger.py  task.py  transformer.py  transformer_v2.py  transformerv2.py
salt/onnx/: check.py  to_onnx.py
salt/optim/: __init__.py  hybrid_muon_adamw.py
salt/submit/: condor_handler.py  slurm_handler.py  submit_htcondor.py  submit_slurm.py  submit_slurm.sh
salt/tests/: test_attention.py  test_cli.py  test_datasets.py  test_dense.py  test_edges.py  test_featurewise.py  test_initnet.py  test_lightning.py  test_masks.py  test_models.py  test_onnx.py  test_optimizer.py  test_pipeline.py  test_posenc.py  test_predict.py  test_train.py  test_transformer.py  test_transformerv2.py  test_union_find.py  test_utils.py
salt/tests/configs/: no_global_inputs.yaml  param_concat.yaml  param_featurewise.yaml  test_config.yaml
salt/utils/: __init__.py  array_utils.py  arrays.py  benchmarking.py  class_names.py  clean_logs.py  cli.py  collate.py  compare_models.py  configs.py  edge_features.py  file_utils.py  fileutils.py  get_onnx_metadata.py  get_structured_input_dict.py  git_check.py  h5tools.py  inputs.py  logging.py  mask_utils.py  module_from_string.py  repair_ckpt.py  scalers.py  tensor_utils.py  tests.py  typing.py  union_find.py
salt/utils/muP_utils/: configuration_muP.py  functions_check_muP.py  generateModel.py  main_muP.py  smaller_it.py
setup/: Dockerfile  install.sh  install_flash.sh  run_container.sh  setup_conda.sh  singularity_envs.sh
setup/docker/salt/: Dockerfile
setup/docker/saltbase/: Dockerfile
setup/docker/testing/: Dockerfile
